fix: add scroll to menu list on mobile

--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -35,8 +35,10 @@
       }
 
       @include mobile {
+        overflow-y: auto;
         flex-direction: column;
-        row-gap: 20px;
+        row-gap: 10px;
+        padding-block: 30px;
       }
     }
 
